[gd_scene load_steps=7 format=2]

[ext_resource path="res://FarmNer/Assets/Textures/bandageItem.png" type="Texture" id=1]
[ext_resource path="res://FarmNer/Assets/BandageItem/Bandage.gd" type="Script" id=2]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform vec4 outline_color : hint_color;
uniform float turnOn = 0.0;

void fragment()
{
	float size_x = 1.0/float(textureSize(TEXTURE, 0).x) * turnOn;
	float size_y = 1.0/float(textureSize(TEXTURE, 0).y) * turnOn;
	vec4 sprite_color = texture(TEXTURE, UV);
	float alpha = -4.0 * sprite_color.a;
	alpha += texture(TEXTURE, UV + vec2(size_x, 0)).a;
	alpha += texture(TEXTURE, UV + vec2(-size_x, 0)).a;
	alpha += texture(TEXTURE, UV + vec2(0, size_y)).a;
	alpha += texture(TEXTURE, UV + vec2(0, -size_y)).a;
	vec4 final_color = mix(sprite_color, outline_color, clamp(alpha, 0.0, 1.0));
	COLOR = vec4(final_color.rgb, clamp(abs(alpha) + sprite_color.a, 0.0, 1.0));
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/turnOn = 0.0

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=3]

[node name="Bandage" type="Node2D"]
scale = Vector2( 0.485, 0.485 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 0.168262, 0.168262 )
collision_layer = 16384
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 14.9592, 14.9592 )
shape = SubResource( 4 )

[node name="PlayerCollision" type="Area2D" parent="."]
scale = Vector2( 0.157, 0.157 )
collision_layer = 16384
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
scale = Vector2( 69.4916, 69.4916 )
shape = SubResource( 3 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_PlayerCollision_body_entered"]
[connection signal="body_exited" from="PlayerCollision" to="." method="_on_PlayerCollision_body_exited"]
